# nitpicker

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  nitpicker.toml  nitpicker.toml.example
.github/workflows/: nitpicker-manual-dogfood.yml
crates/nitpicker-agent/: Cargo.toml  README.md
crates/nitpicker-agent/examples/: file_agent.rs
crates/nitpicker-agent/src/: agent.rs  azure.rs  codex.rs  compact.rs  config.rs  lib.rs  llm.rs  prompts.rs  provider.rs  session.rs  tools.rs
src/: agent.rs  azure.rs  codex.rs  compact.rs  config.rs  debate.rs  detect.rs  llm.rs  main.rs  openrouter.rs  output.rs  pr.rs  progress.rs  prompts.rs  provider.rs  reflect.rs  review.rs  session.rs  tools.rs
src/gemini_proxy/: client.rs  mod.rs  oauth.rs  proxy.rs  retry.rs  token.rs  transform.rs
